[package]
name = "cassette_reannotation"
version = "1.0.0"
authors = ["Ben Booth <benwbooth@gmail.com>"]

[dependencies]
regex = "*"
failure = "*"
structopt = "*"
structopt-derive = "*"
bio = "*"
csv = "1.0.0-beta.5"
itertools = "*"
url = "*"
lazy_static = "*"
serde_derive = "*"
serde_json = "*"
unindent = "*"
futures = "*"
futures-cpupool = "*"
num_cpus = "*"
ordered-float = "*"
duct = "*"
rust-htslib = "*"
percent-encoding = "*"

#[dependencies.rust-htslib]
#git = "https://github.com/rust-bio/rust-htslib.git"

[dependencies.serde]
version = "*"
features = ["std"]

[dependencies.linked-hash-map]
version = "*"
features = ["serde_impl"]

[dependencies.concurrent-hashmap]
version = "*"
default-features = false

[lib]
name = "bam2bedgraph"
path = "src/lib.rs"

[[bin]]
name = "bam2bedgraph"
path = "src/bam2bedgraph.rs"

[[bin]]
name = "cassette_reannotation"
path = "src/cassette_reannotation.rs"

[[bin]]
name = "cassette_lengths"
path = "src/cassette_lengths.rs"

[[bin]]
name = "exon_cov"
path = "src/exon_cov.rs"

[[bin]]
name = "adjusted_intron_psi"
path = "src/adjusted_intron_psi.rs"

[[bin]]
name = "gff2bb"
path = "src/gff2bb.rs"

[profile.dev]
#opt-level = 2
